--- a/materials.yml
+++ b/materials.yml
@@ -1,11 +1,9 @@
 - title: Вероятностное пространство. Классическая, комбинаторная, геометрическая вероятность. 
   number: 1
-  materials: /lectures/1.pdf
+  materials: /lectures/lecture_1.pdf
   notes: /notes/1.pdf
-  seminar: /seminars/1.pdf
 
 - title: Условная и полная вероятность. Независимость событий. Теорема Байеса.
   number: 2
-  materials: /lectures/2.pdf
+  materials: /lectures/lecture_2.pdf
   notes: /notes/2.pdf
-  seminar: /seminars/2.pdf
